fix: change code insert and create swagger for bank
