# internal/handler/bank/get_by_id.go
@@ -7,6 +7,18 @@ import (
 	"github.com/phincon-backend/laza/helper"
 )
 
+// GetByIdBank godoc
+// @Summary Get bank identified by the given id
+// @Description get the bank corresponding to the input Id
+// @Tags bank
+// @Accept json
+// @Produce json
+// @Param id path int true "ID of the bank"
+// @Security JWT
+// @Success 200 {object} helper.Response{code=string,isError=bool,status=string,data=model.Bank}
+// @Failure 400 {object} helper.Response{code=int,description=string,isError=bool}
+// @Failure 500 {object} helper.Response{code=int,description=string,isError=bool}
+// @Router /bank/{id} [get]
 func (h *bankHandler) getBankById(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
